[gd_scene load_steps=16 format=3 uid="uid://b3d4gpyo3g3wb"]

[ext_resource type="Script" path="res://scripts/MainMenu.gd" id="1_g575d"]
[ext_resource type="Texture2D" uid="uid://cejrldl0vyxai" path="res://assets/UI/menu/background.png" id="2_cxsty"]
[ext_resource type="Texture2D" uid="uid://ga554bghc5q4" path="res://assets/UI/menu/clouds.png" id="3_bhvwj"]
[ext_resource type="Texture2D" uid="uid://bpfxp8uaqfw5s" path="res://assets/UI/menu/ropes.png" id="4_8odao"]
[ext_resource type="PackedScene" uid="uid://bwgepol6ephli" path="res://scenes/UI/Button.tscn" id="5_hd3oj"]
[ext_resource type="AudioStream" uid="uid://ms7fwky854js" path="res://audio/menu-music.mp3" id="6_1ppum"]
[ext_resource type="AudioStream" uid="uid://b3y4t8ff8ekdl" path="res://audio/ladder-menu.wav" id="6_2jt8r"]

[sub_resource type="Animation" id="Animation_thhpt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../MainMenuDrop:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../../Music:volume_db")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-15.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -648)]
}

[sub_resource type="Animation" id="Animation_wnff0"]
resource_name = "fade_in"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 1.6, 1.9),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, -648), Vector2(0, 0), Vector2(0, -10)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../MainMenuDrop:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_7dwxr"]
resource_name = "fade_out"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 1.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, -10), Vector2(0, 0), Vector2(0, -648)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../MainMenuDrop:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_by6xa"]
resource_name = "music_fade_out"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../../Music:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-15.0, -80.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_v65nh"]
_data = {
"RESET": SubResource("Animation_thhpt"),
"fade_in": SubResource("Animation_wnff0"),
"fade_out": SubResource("Animation_7dwxr"),
"music_fade_out": SubResource("Animation_by6xa")
}

[sub_resource type="Gradient" id="Gradient_bto04"]
offsets = PackedFloat32Array(0, 0.0588235, 0.941176, 1)
colors = PackedColorArray(1, 1, 1, 0, 0.0649351, 0.0649351, 0.0649351, 1, 0.0649351, 0.0649351, 0.0649351, 1, 1, 1, 1, 0)
metadata/_snap_enabled = true
metadata/_snap_count = 17

[sub_resource type="GradientTexture2D" id="GradientTexture2D_podgx"]
gradient = SubResource("Gradient_bto04")
width = 220
height = 6
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(1, 0.5)

[sub_resource type="Theme" id="Theme_68s4g"]

[node name="MainScreen" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_g575d")

[node name="MenuAnimator" type="AnimationPlayer" parent="."]
process_mode = 3
deterministic = true
root_node = NodePath("../MainMenu/MenuOptions")
libraries = {
"": SubResource("AnimationLibrary_v65nh")
}
autoplay = "fade_in"

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="Background" type="TextureRect" parent="ParallaxBackground"]
offset_right = 1440.0
offset_bottom = 810.0
scale = Vector2(0.800107, 0.800107)
texture = ExtResource("2_cxsty")

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2(1152, 0)

[node name="Clouds" type="TextureRect" parent="ParallaxBackground/ParallaxLayer"]
offset_right = 720.0
offset_bottom = 700.0
scale = Vector2(0.8, 0.8)
texture = ExtResource("3_bhvwj")

[node name="MainMenu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0

[node name="MenuOptions" type="TextureRect" parent="MainMenu"]
z_as_relative = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -648.0
offset_right = 1152.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_8odao")
stretch_mode = 5

[node name="Play" parent="MainMenu/MenuOptions" instance=ExtResource("5_hd3oj")]
show_behind_parent = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -175.0
offset_top = 72.0
offset_right = 175.0
offset_bottom = 182.0
grow_horizontal = 2

[node name="Sound" parent="MainMenu/MenuOptions" instance=ExtResource("5_hd3oj")]
show_behind_parent = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -175.0
offset_top = -71.5
offset_right = 175.0
offset_bottom = 38.5
grow_horizontal = 2
grow_vertical = 2
toggle_mode = true
flip_h = true
text = "sound"

[node name="Striketrough" type="Control" parent="MainMenu/MenuOptions/Sound"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Line" type="TextureRect" parent="MainMenu/MenuOptions/Sound/Striketrough"]
modulate = Color(0, 0, 0, 1)
layout_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -110.0
offset_top = -3.0
offset_right = 110.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 2
rotation = -0.13439
pivot_offset = Vector2(110, 3)
texture = SubResource("GradientTexture2D_podgx")

[node name="Line2" type="TextureRect" parent="MainMenu/MenuOptions/Sound/Striketrough"]
modulate = Color(0, 0, 0, 1)
layout_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -110.0
offset_top = -3.0
offset_right = 110.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 2
rotation = -2.82394
pivot_offset = Vector2(110, 3)
texture = SubResource("GradientTexture2D_podgx")

[node name="Quit" parent="MainMenu/MenuOptions" instance=ExtResource("5_hd3oj")]
show_behind_parent = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -175.0
offset_top = -209.0
offset_right = 175.0
offset_bottom = -99.0
grow_horizontal = 2
grow_vertical = 0
text = "quit"

[node name="MainMenuDrop" type="AudioStreamPlayer" parent="MainMenu"]
stream = ExtResource("6_2jt8r")
volume_db = -8.0

[node name="HowToPlayScreen" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_68s4g")

[node name="Background" type="ColorRect" parent="HowToPlayScreen"]
self_modulate = Color(0.152941, 0.152941, 0.152941, 0.545098)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Instructions" type="Control" parent="HowToPlayScreen"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 40.0
offset_bottom = 500.0
grow_horizontal = 2

[node name="Title" type="Label" parent="HowToPlayScreen/Instructions"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 80.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 46
text = "how to play"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Explanation" type="Label" parent="HowToPlayScreen/Instructions"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 75.0
offset_top = -139.0
offset_right = -75.0
offset_bottom = 185.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 26
text = "Rick likes to drink, and he is slowly forgetting how to move!

Point and shoot at the enemies, but keep an eye out for your controls: over time, your directional keys will re-bind to new, random ones, and you might eventually run out of keys!

how long will you be able to defend your ranch?"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
uppercase = true

[node name="Back" parent="HowToPlayScreen" instance=ExtResource("5_hd3oj")]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 100.0
offset_top = -148.0
offset_right = 350.0
offset_bottom = -63.0
grow_vertical = 0
text = "back"

[node name="Start" parent="HowToPlayScreen" instance=ExtResource("5_hd3oj")]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -350.0
offset_top = -148.0
offset_right = -100.0
offset_bottom = -63.0
grow_horizontal = 0
grow_vertical = 0
text = "start"

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_1ppum")
volume_db = -15.0
autoplay = true

[connection signal="pressed" from="MainMenu/MenuOptions/Play" to="." method="_on_play_pressed"]
[connection signal="toggled" from="MainMenu/MenuOptions/Sound" to="." method="_on_sound_toggled"]
[connection signal="pressed" from="MainMenu/MenuOptions/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="HowToPlayScreen/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="HowToPlayScreen/Start" to="." method="_on_start_pressed"]
